# sabiedu_edulms

./: .env.example  .gitignore  README.md  d.md  docker-compose.yml
agents/: .env.example  Dockerfile.dev  README.md  __init__.py  api_bridge.py  main.py  pyproject.toml
agents/base/: __init__.py
agents/communication/: __init__.py  cache_manager.py  config_example.py  gemini_client.py  notification_service.py  session_manager.py  task_queue_manager.py  test_communication.py  tidb_service.py
agents/config/: __init__.py
agents/specialized/: __init__.py  analytics_agent.py  assessment_agent.py  content_curator_agent.py  content_generation_agent.py  learning_path_agent.py  monitoring_agent.py  personalization_agent.py  research_agent.py  tutor_agent.py
agents/tests/: __init__.py
agents/workflows/: __init__.py  execute_workflow.py  multi_agent_orchestrator.py
backend_fastapi/: .env.example  README.md  alembic.ini  check_env.py  main.py  requirements.txt  schema.sql  setup_database.py
backend_fastapi/database/: connection.py
backend_fastapi/models/: __init__.py  agent_session.py  analytics.py  content.py  user.py  workflow.py
backend_fastapi/routers/: __init__.py  agents.py  analytics.py  auth.py  users.py  workflows.py
backend_fastapi/services/: agent_service.py  auth_service.py  vector_service.py
frontend/: .env.example  Dockerfile.dev  nuxt.config.ts  package-lock.json  package.json
frontend/composables/: useAuth.ts  useCourses.ts
scripts/: deploy-production.bat  deploy-production.sh  dev-start.sh  setup-environment.sh  stop-dev.sh  stop-services.sh
(+13 files in other folders)
